[package]
name = "untitled-smaps-poller"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
env_logger = "0.11.7"
gnuplot = "0.0.45"
indexmap = "2.9.0"
log = "0.4.27"
procfs = "0.17.0"
regex = "1.11.1"
signal-hook = "0.3.17"
