[package]
name = "untitled-smaps-poller"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
env_logger = "0.11.7"
gnuplot = "0.0.46"
log = "0.4.27"
procfs = "0.17.0"
regex = "1.11.1"
signal-hook = "0.3.17"
terminal_size = "0.4.2"

[dev-dependencies]
criterion = "0.6"
itertools = "0.14"

[[bench]]
name = "bench_mask"
harness = false
